# ais-route-reconstruction

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: competition_summary.md  modeling_strategy.md
scripts/: run_reconstruction.py
src/route_reconstruction/: __init__.py  data.py  features.py  kalman.py  metrics.py  models.py  pipeline.py  reconstruction.py  submission.py  utils.py
tests/: test_blocks.py  test_features.py  test_metrics.py  test_pipeline_synthetic.py
